--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
 [package]
-name = "tests"
+name = "cvec"
 version = "0.1.0"
 edition = "2021"
-
-[[bin]]
-name = "test"
-path = "tests/main.rs"
-
-
 
 [dependencies]
